# dithering

./: .gitignore  DIDDER.md  README.md  dither.py  dither_explorer.py  palettes.py  pyproject.toml
